add new structure html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Prueba uno</title>
 </head>
 <body>
-  <div>caja practica</div>
+  <div>
+    <h2>Este es el titulo</h2>
+    <p>este es un parrago</p>
+    <!-- TODO: imagen de referncia -->
+  </div>
 </body>
 </html>
