--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div>
     <h2>Este es el titulo</h2>
-    <p>este es un parrago</p>
+    <p class="background">este es un parrago</p>
     <!-- TODO: imagen de referncia -->
   </div>
 </body>
