--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <p class="background">este es un parrafo</p>
     <!-- TODO: imagen de referncia -->
   </div>
+  <div>
+    <h2>Este es el titulo</h2>
+    <p class="background">este es un parrafo</p>
+    <!-- TODO: imagen de referncia -->
+  </div>
+  <div>
+    <h2>Este es el titulo</h2>
+    <p class="background">este es un parrafo</p>
+    <!-- TODO: imagen de referncia -->
+  </div>
 </body>
 </html>
