add footer html

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <p class="background">este es un parrafo</p>
     <!-- TODO: imagen de referncia -->
   </div>
+  <footer>
+    Todos los derechos reservados. 2023
+  </footer>
 </body>
 </html>
