add colombia to footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- TODO: imagen de referncia -->
   </div>
   <footer>
-    Todos los derechos reservados. 2023
+    Todos los derechos reservados. 2023 Colombia
   </footer>
 </body>
 </html>
